fix share button spacing on mobile

--- a/source/stylesheets/product.css.sass
+++ b/source/stylesheets/product.css.sass
@@ -118,6 +118,9 @@
       margin-right: 20px
       position: relative
       
+      @media screen and (max-width: $break-medium)
+        margin: 0 10px
+      
       a
         cursor: pointer
         display: block
